fixed bug where page width on mobile was being expanded by hero text

--- a/client/sass/index.scss
+++ b/client/sass/index.scss
@@ -153,10 +153,14 @@ body {
     color: white;
     font-size: 2rem;
     margin-top: -5px;
-    width: 369px;
+    width: 71%;
+    max-width: 369px;
+    min-width: 315px;
     font-weight: 500;
     line-height: 1.32em;
-    margin-left: 17px;
+    // margin-left: 17px;
+    position: relative;
+    left: 17px;
   }
 
   p:nth-child(3) {
@@ -181,12 +185,10 @@ body {
 p:nth-child(2) {
   display: block;
   background-image: url(/client/img/underlines.png);
-  background-repeat-x: no-repeat;
-  background-repeat-y: no-repeat;
-  background-size: 77% 40%;
-  background-position-y: 117px;
-  background-position-x: -8px;
-  z-index: 40000;
+  background-repeat: no-repeat;
+  background-size: 77% 42%;
+  background-position-y: 114px;
+  background-position-x: -7px;
 }
 
   // Configure hero wrapper for larger displays:
